methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
  if (getCouleurSol() ==  Color.green) {
  ^